# pyremote

./: CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py
pyremote/: interest_index_scoring.py  main.py  ui.py
pyremote/datahelpers/: data_compiler.py
pyremote/datasources/: parse_html.py  request_timer.py
pyremote/errorhandling/: errors.py
pyremote/scoringmethods/: scoring_dictionaries.py  scoring_functions.py
