[metadata]
name = pyremote
description = gets most interesting live mlb games
author = Matthew Qandil
license = MIT
license_file = LICENSE
platforms = osx, unix
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    pyremote
install_requires = 
    pandas>=1.3.2
    Beautifulsoup4>=4.9.3
    requests>=2.26.0
    tqdm>=4.62.2

python_requires = >=3.7
package_directory = 
    =pyremote
zip_safe = no